--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="MENMA_ICON.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/MENMA_ICON.svg" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400..900;1,400..900&display=swap"
 			rel="stylesheet"
